[tool.poetry]
name = "ayashige"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.7.00"
arq = "^0.24"
dataclasses-json = "^0.5.7"
fastapi = "^0.85.2"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.9"}
gunicorn = "^20.1.0"
httpx = "^0.23.0"
Levenshtein = "^0.20.8"
loguru = "^0.6.0"
pyhumps = "^3.8.0"
pyopenssl = "^22.1.0"
redis = "4.2.2"
tld = "^0.12.6"
ujson = "^5.5.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
websocket-client = "^1.4.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.7.7"
autopep8 = "^2.0.0"
black = "^22.10.0"
coveralls = "^3.3.1"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
nest-asyncio = "^1.5.6"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
pytest-env = "^0.8.1"
pytest-mock = "^3.10.0"
pytest-parallel = "^0.1.1"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.5"
pytest-timeout = "^2.1.0"
pyupgrade = "^3.2.0"
respx = "^0.20.0"
vcrpy = "^4.2.1"
py = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
