[tool.poetry]
name = "ayashige"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
aiocache = { extras = ["redis"], version = "^0.12.2" }
aiofiles = "^24.1.0"
arq = "^0.26.0"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"
httpx = "^0.27.0"
Levenshtein = "^0.25.1"
loguru = "^0.7.2"
pyhumps = "^3.8.0"
pyopenssl = "^24.1.0"
redis = { extras = ["hiredis"], version = "^4.6" }
tld = "^0.13"
ujson = "^5.10.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
websocket-client = "^1.8.0"

[tool.poetry.group.dev.dependencies]
coveralls = "^4.0.1"
mypy = "^1.10.1"
nest-asyncio = "^1.6.0"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
pytest-parallel = "^0.1.1"
pytest-randomly = "^3.15.0"
pytest-timeout = "^2.3.1"
respx = "^0.21.1"
types-redis = "^4.5.1.4"
vcrpy = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = ["TESTING=True"]
